opam-version: "1.2"
maintainer: "Louis Roché <louis@louisroche.net>"
authors: ["Louis Roché <louis@louisroche.net>"]
homepage: "https://github.com/Khady/ocaml-junit"
bug-reports: "https://github.com/Khady/ocaml-junit/issues"
license: "LGPLv3+ with OCaml linking exception"
dev-repo: "https://github.com/Khady/ocaml-junit.git"
doc: "https://khady.github.io/ocaml-junit/"
tags: ["junit" "jenkins" "alcotest"]
depends: [
  "dune" {build & >= "1.0"}
  "odoc" {doc & >= "1.1.1"}
  "alcotest"
  "junit"
]
available: [ocaml-version >= "4.02.3"]
build: [
  ["dune" "subst"] {pinned}
  ["dune" "build" "-p" name "-j" jobs]
]
build-doc: [["dune" "build" "-p" name "-j" jobs]]
