opam-version: "2.0"
maintainer: "Louis Roché <louis@louisroche.net>"
authors: ["Louis Roché <louis@louisroche.net>"]
homepage: "https://github.com/Khady/ocaml-junit"
bug-reports: "https://github.com/Khady/ocaml-junit/issues"
license: "LGPL-3.0-or-later WITH OCaml-LGPL-linking-exception"
dev-repo: "git+https://github.com/Khady/ocaml-junit.git"
doc: "https://khady.github.io/ocaml-junit/"
tags: ["junit" "jenkins" "alcotest"]
depends: [
  "dune" {>= "3.0"}
  "odoc" {with-doc & >= "1.1.1"}
  "alcotest" {>= "1.8.0"}
  "junit" {= version}
  "ocamlformat" {= "0.27.0" & with-dev-setup}
]
build: [
  ["dune" "subst"] {dev}
  ["dune" "build" "-p" name "-j" jobs]
  ["dune" "build" "-p" name "-j" jobs] {with-doc}
]
name: "junit_alcotest"
synopsis: "JUnit XML reports generation for alcotest tests"
description: "JUnit XML reports generation for alcotest tests"
